file(GLOB SRC_SOURCE ./*.cpp )
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/tests)
foreach(var ${SRC_SOURCE})
    string(REGEX REPLACE ".*/" "" var ${var})
    string(REGEX REPLACE ".cpp" "" tgt ${var})
    add_executable(${tgt} ${var})
    target_link_libraries(${tgt} PRIVATE rpc net)
endforeach()